<resources>
    <string name="app_name">TourManagerModule226b</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="create_tour_image_description">Beispielbild</string>
    <string name="create_tour_titel">Titel einfügen</string>
    <string name="create_tour_location">Startort auswählen</string>
    <string name="create_tour_details">Details</string>
    <string name="create_tour_date">date</string>
    <string name="create_tour_description">Beschreibung</string>
    <string name="create_tour_weather">Wetter angeben</string>
    <string name="create_tour_days">Anzahl Tage</string>
    <string name="create_tour_zero">0</string>
    <string name="create_tour_distance">Distanz</string>
    <string name="Home_title">Meine Touren</string>
    <string name="save">Speichern</string>
    <string name="driven_kilometers">Gefahrene Kilometer:</string>
</resources>