<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateTourActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="350dp"
                    android:contentDescription="@string/create_tour_image_description"
                    android:scaleType="centerCrop"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/motorcycle_picture_1" />

                <EditText
                    android:id="@+id/create_tour_titel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/create_tour_titel"
                    android:inputType="textPersonName"
                    android:textColorHint="#BE000000"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView"
                    android:importantForAutofill="no" />

                <EditText
                    android:id="@+id/create_tour_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/create_tour_location"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:textColorHint="#BE000000"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/create_tour_titel" />

                <EditText
                    android:id="@+id/create_tour_days"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:ems="10"
                    android:hint="@string/create_tour_zero"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:textColorHint="#BE000000"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/create_tour_distance" />

                <EditText
                    android:id="@+id/create_tour_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/create_tour_zero"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:textColorHint="#BE000000"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/create_tour_location" />

                <EditText
                    android:id="@+id/create_tour_weather"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/create_tour_weather"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:textColorHint="#BE000000"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/create_tour_days" />

                <EditText
                    android:id="@+id/create_tour_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:autofillHints="date"
                    android:ems="10"
                    android:hint="@string/create_tour_date"
                    android:inputType="date"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/create_tour_weather" />

                <EditText
                    android:id="@+id/create_tour_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="textMultiLine"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/create_tour_date"
                    android:importantForAutofill="no" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>